[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2",
            "matplotlib", "numpy", "rich", "astropy", "casatools", "blessed"]
build-backend = "setuptools.build_meta"

[project]
name = "vlbi"
version = "0.1.0"
description = "A collection of useful tools for VLBI data"
authors = [{name = "Benito Marcote", email = "marcote@jive.eu"}]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
delay_mapping = "vlbi.delay_mapping:cli"
msoverview = "vlbi.msoverview:main"
fix_difmap_image = "vlbi.fix_difmap_image:main"
